Gyms Cards and Indi Gym Card

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
-      <li><a>Home</a></li>
+      <li class="hover:bg-red-400 hover:text-slate-200 rounded-lg"><a>Home</a></li>
     </ul>
   </div>
   <div class="navbar-end">
