--- a/src/app/components/gym-cards/gym-cards.component.html
+++ b/src/app/components/gym-cards/gym-cards.component.html
@@ -1,4 +1,4 @@
-<div class="grid lg:grid-cols-2  md:grid-cols-2 grid-cols-1  gap-4 ">
+<div class="ml-20 grid lg:grid-cols-2  md:grid-cols-2 grid-cols-1  gap-4 ">
     <app-gym-card></app-gym-card>
     <app-gym-card></app-gym-card>
     <app-gym-card></app-gym-card>
