--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="max-w-6xl mx-auto">
   <app-navbar></app-navbar>
-  <app-gym-cards></app-gym-cards>
+  <router-outlet></router-outlet>
 </div>
