--- a/src/app/components/trainer-list/trainer-list.component.html
+++ b/src/app/components/trainer-list/trainer-list.component.html
@@ -1,3 +1,5 @@
+<h1 class="text-4xl flex justify-center items-center">Trainer List</h1>
+
 <div class="flex flex-row ">
   <div class="w-[700px] "><div class="overflow-x-auto">
     <table class="table ">
