Pokemon Details Component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar  bg-slate-700 rounded-lg mb-5 mt-2">
+<div class="navbar bg-slate-700 rounded-lg mb-5 mt-2">
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -24,11 +24,13 @@
         <li><a>Home</a></li>
       </ul>
     </div>
-    <a class="btn btn-ghost text-xl">Pokemon</a>
+    <a href="/" class="btn btn-ghost text-xl">Pokemon</a>
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
-      <li class="hover:bg-red-400 hover:text-slate-200 rounded-lg"><a>Home</a></li>
+      <li class="hover:bg-red-400 hover:text-slate-200 rounded-lg">
+        <a>Home</a>
+      </li>
     </ul>
   </div>
   <div class="navbar-end">
