--- a/src/app/components/trainer-list/trainer-list.component.html
+++ b/src/app/components/trainer-list/trainer-list.component.html
@@ -1,51 +1,53 @@
 <h1 class="text-4xl flex justify-center items-center">Trainer List</h1>
 
-<div class="flex flex-row ">
-  <div class="w-[700px] "><div class="overflow-x-auto">
-    <table class="table ">
-      <!-- head -->
-      <thead>
-        <tr>
-          <th>Trainer Name</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody class="bg-slate-700 ">
-        <!-- row 1 -->
-        <tr>
-          <td>
-            <div class="flex items-center gap-3">
-              <div>
-                <div class="font-bold">Hart Hagerty</div>
+<div class="flex flex-row">
+  <div class="w-[700px]">
+    <div class="overflow-x-auto">
+      <table class="table">
+        <!-- head -->
+        <thead>
+          <tr>
+            <th>Trainer Name</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody class="bg-slate-700">
+          <!-- row 1 -->
+          <tr>
+            <td>
+              <div class="flex items-center gap-3">
+                <div>
+                  <div class="font-bold">Hart Hagerty</div>
+                </div>
               </div>
-            </div>
-          </td>
-          <th>
-            <button class="btn btn-ghost btn-xs">details</button>
-          </th>
-        </tr>
+            </td>
+            <th>
+              <button class="btn btn-ghost btn-xs">details</button>
+            </th>
+          </tr>
 
-      <!-- foot -->
-      <tfoot>
-        <tr>
-         
-          <th>Trainer Name</th>
+          <!-- foot -->
+        </tbody>
 
-          <th></th>
-        </tr>
-      </tfoot>
-      
-    </table>
-  </div></div>
+        <tfoot>
+          <tr>
+            <th>Trainer Name</th>
+
+            <th></th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
   <div class="w-[500px]">
-    <img  src="https://i.redd.it/ayi0xce9yb7a1.gif" alt="">
+    <img src="https://i.redd.it/ayi0xce9yb7a1.gif" alt="" />
     <div class="flex m-auto items-center justify-center ml-48">
-        <div class="card w-72 bg-primary text-primary-content">
-            <div class="card-body">
-              <h2 class="card-title">Gym ID: </h2>
-              <p>Gym Name: </p>
-            </div>
-          </div>
+      <div class="card w-72 bg-primary text-primary-content">
+        <div class="card-body">
+          <h2 class="card-title">Gym ID:</h2>
+          <p>Gym Name:</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
