Pokemon cards shadow fix

--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -1,10 +1,10 @@
 <h1 class="flex items-center justify-center text-4xl mb-5">Pokemon Details</h1>
 
 <div>
-  <div class="card card-compact bg-base-100 shadow-xl">
+  <div class="card card-compact bg-slate-700 shadow-2xl">
     <figure>
       <img
-        class="rounded-lg"
+        class="rounded-lg mt-2"
         src="https://i.pinimg.com/originals/db/be/4d/dbbe4d8b26b526e17cd78b90a9fc953c.gif"
         alt="Shoes"
       />
