Redesign Gym Page

--- a/src/app/components/gym-cards/gym-cards.component.html
+++ b/src/app/components/gym-cards/gym-cards.component.html
@@ -1,4 +1,8 @@
-<div class="ml-20 grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 gap-4">
+<app-gym-banner></app-gym-banner>
+<h1 class="mt-10 font-bold text-4xl flex items-center justify-center mb-10">
+  Gym List
+</h1>
+<div class="ml-72 mr-52 grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1">
   <app-gym-card></app-gym-card>
   <app-gym-card></app-gym-card>
   <app-gym-card></app-gym-card>
