--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-slate-700 rounded-lg mb-5 mt-2">
+<div class="navbar bg-neutral text-neutral-content">
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -17,23 +17,11 @@
           />
         </svg>
       </div>
-      <ul
-        tabindex="0"
-        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
-      >
-        <li><a>Home</a></li>
-      </ul>
     </div>
-    <a href="/" class="btn btn-ghost text-xl">Pokemon</a>
+    <a class="btn btn-ghost text-xl">Pokemon Gym Hub</a>
   </div>
-  <div class="navbar-center hidden lg:flex">
-    <ul class="menu menu-horizontal px-1">
-      <li class="hover:bg-red-400 hover:text-slate-200 rounded-lg">
-        <a>Home</a>
-      </li>
-    </ul>
-  </div>
+  <div class="navbar-center hidden lg:flex"></div>
   <div class="navbar-end">
-    <a class="btn btn-primary">Create</a>
+    <a href="/" class="btn">Home</a>
   </div>
 </div>
