--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="max-w-6xl mx-auto">
+<div>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
+<!-- <div class="max-w-6xl mx-auto"></div> -->
