--- a/src/app/components/gym-cards/gym-card/gym-card.component.html
+++ b/src/app/components/gym-cards/gym-card/gym-card.component.html
@@ -1,10 +1,14 @@
-<div class="card w-96 bg-base-100 shadow-xl image-full ">
-    <figure><img src="https://i.pinimg.com/originals/8a/81/ec/8a81ecd8fdd266b3221da325875c0ea8.gif" alt="Shoes" /></figure>
-    <div class="card-body">
-      <h2 class="card-title">Gym1</h2>
-      <!-- <p>If a dog chews shoes whose shoes does he choose?</p> -->
-      <div class="card-actions justify-end">
-        <button class="btn btn-primary mt-10 flex m-auto transition duration-150 ease-out ">Select</button>
-      </div>
+<div class="card w-96 bg-base-100 shadow-xl mb-10">
+  <figure>
+    <img src="https://www.pokemongoplusplus.com/img/img-1.jpg" alt="Shoes" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title flex justify-center">Gym</h2>
+    <!-- <p>If a dog chews shoes whose shoes does he choose?</p> -->
+    <div class="card-actions justify-end flex justify-center">
+      <button class="btn btn-primary bg-blue-300 text-black border-none">
+        Select
+      </button>
     </div>
   </div>
+</div>
