--- a/src/app/components/gym-cards/gym-card/gym-card.component.html
+++ b/src/app/components/gym-cards/gym-card/gym-card.component.html
@@ -1,14 +1,14 @@
-<div class="card w-96 bg-base-100 shadow-xl mb-10">
+<div class="card w-96 bg-base-100 shadow-xl mb-10 cursor-pointer card-hover">
   <figure>
     <img src="https://www.pokemongoplusplus.com/img/img-1.jpg" alt="Shoes" />
   </figure>
   <div class="card-body">
     <h2 class="card-title flex justify-center">Gym</h2>
     <!-- <p>If a dog chews shoes whose shoes does he choose?</p> -->
-    <div class="card-actions justify-end flex justify-center">
-      <button class="btn btn-primary bg-blue-300 text-black border-none">
-        Select
-      </button>
+    <div class="card-actions flex justify-center">
+      <!-- <button class="btn btn-primary bg-blue-300 text-black border-none">
+        Enter
+      </button> -->
     </div>
   </div>
 </div>
