--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,8 @@
     <a class="btn btn-ghost text-xl">Pokemon Gym Hub</a>
   </div>
   <div class="navbar-center hidden lg:flex"></div>
-  <div class="navbar-end">
-    <a href="/" class="btn">Home</a>
+  <div class="navbar-end gap-2">
+    <a href="/" class="btn border-none bg-blue-200 text-black">About</a>
+    <a href="/" class="btn bg-teal-500 border-none">Home</a>
   </div>
 </div>
