--- a/src/app/components/gym-cards/gym-card/gym-card.component.html
+++ b/src/app/components/gym-cards/gym-card/gym-card.component.html
@@ -3,7 +3,7 @@
     <img src="https://www.pokemongoplusplus.com/img/img-1.jpg" alt="Shoes" />
   </figure>
   <div class="card-body">
-    <h2 class="card-title flex justify-center">Gym</h2>
+    <h2 class="card-title flex justify-center">{{ gym_data.name }}</h2>
     <!-- <p>If a dog chews shoes whose shoes does he choose?</p> -->
     <div class="card-actions flex justify-center">
       <!-- <button class="btn btn-primary bg-blue-300 text-black border-none">
