--- a/src/app/components/gym-cards/gym-cards.component.html
+++ b/src/app/components/gym-cards/gym-cards.component.html
@@ -3,9 +3,7 @@
   Gym List
 </h1>
 <div class="ml-72 mr-52 grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1">
-  <app-gym-card></app-gym-card>
-  <app-gym-card></app-gym-card>
-  <app-gym-card></app-gym-card>
-  <app-gym-card></app-gym-card>
-  <app-gym-card></app-gym-card>
+  <div *ngFor="let gym of gyms">
+    <app-gym-card [gym_data]="gym"></app-gym-card>
+  </div>
 </div>
