--- a/src/app/components/gym-cards/gym-banner/gym-banner.component.html
+++ b/src/app/components/gym-cards/gym-banner/gym-banner.component.html
@@ -3,7 +3,22 @@
     <div class="max-w-md">
       <h1 class="text-5xl font-bold">Welcome to Pokemon Gym Hub</h1>
       <p class="py-6 text-2xl text-gray-500">Pick Your Gym</p>
-      <button class="btn btn-primary">Create Gym</button>
+      <!-- Open the modal using ID.showModal() method -->
+      <button class="btn btn-primary" onclick="my_modal_1.showModal()">
+        Create Gym
+      </button>
+      <dialog id="my_modal_1" class="modal">
+        <div class="modal-box">
+          <h3 class="font-bold text-lg">Hello!</h3>
+          <p class="py-4">Press ESC key or click the button below to close</p>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
     </div>
   </div>
 </div>
