--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="hero min-h-screen bg-base-200 mb-10">
+<div class="hero min-h-screen bg-base-200">
   <div class="hero-content text-center">
     <div class="max-w-md mx-auto">
       <div class="flex items-center justify-center">
