--- a/src/app/components/gym-cards/gym-banner/gym-banner.component.html
+++ b/src/app/components/gym-cards/gym-banner/gym-banner.component.html
@@ -1,4 +1,4 @@
-<div class="hero h-96 w-[] bg-base-200 border-2">
+<div class="hero h-96 bg-base-200 border-2">
   <div class="hero-content text-center">
     <div class="max-w-md">
       <h1 class="text-5xl font-bold">Welcome to Pokemon Gym Hub</h1>
@@ -9,14 +9,33 @@
       </button>
       <dialog id="my_modal_1" class="modal">
         <div class="modal-box">
-          <h3 class="font-bold text-lg">Hello!</h3>
-          <p class="py-4">Press ESC key or click the button below to close</p>
-          <div class="modal-action">
-            <form method="dialog">
-              <!-- if there is a button in form, it will close the modal -->
-              <button class="btn">Close</button>
-            </form>
-          </div>
+          <form method="dialog" (ngSubmit)="submitForm()" #gymForm="ngForm">
+            <div class="form-control">
+              <label for="gymName font-bold" class="block mb-2"
+                >Create Gym</label
+              >
+              <input
+                type="text"
+                id="gymName"
+                name="gymName"
+                placeholder="Gym Name"
+                [(ngModel)]="newGymName"
+                class="flex justify-center items-center m-auto input input-bordered w-full max-w-xs mt-2"
+              />
+            </div>
+            <div class="modal-action mt-4">
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]="!gymForm.valid"
+              >
+                Create
+              </button>
+              <button type="button" class="btn" onclick="my_modal_1.close()">
+                Close
+              </button>
+            </div>
+          </form>
         </div>
       </dialog>
     </div>
