Edit Button on gym Cards

--- a/src/app/components/gym-cards/gym-card/gym-card.component.html
+++ b/src/app/components/gym-cards/gym-card/gym-card.component.html
@@ -4,11 +4,11 @@
   </figure>
   <div class="card-body">
     <h2 class="card-title flex justify-center">{{ gym_data.name }}</h2>
-    <!-- <p>If a dog chews shoes whose shoes does he choose?</p> -->
+    <!-- Edit button -->
+    <button class="edit-button">Edit</button>
+
     <div class="card-actions flex justify-center">
-      <!-- <button class="btn btn-primary bg-blue-300 text-black border-none">
-        Enter
-      </button> -->
+      <!-- Add other actions/buttons if needed -->
     </div>
   </div>
 </div>
