--- a/src/app/components/gym-cards/gym-cards.component.html
+++ b/src/app/components/gym-cards/gym-cards.component.html
@@ -2,7 +2,9 @@
 <h1 class="mt-10 font-bold text-4xl flex items-center justify-center mb-10">
   Gym List
 </h1>
-<div class="ml-72 mr-52 grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1">
+<div
+  class="lg:w-[1300px] mx-auto grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1"
+>
   <div *ngFor="let gym of gyms">
     <app-gym-card [gym_data]="gym"></app-gym-card>
   </div>
