--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -1,22 +1,37 @@
-<h1 class="flex items-center justify-center text-4xl mb-5">Pokemon Details</h1>
-
-<div>
-  <div class="card card-compact bg-slate-700 shadow-2xl">
-    <figure>
+<div class="hero bg-base-200">
+  <div class="hero-content text-center">
+    <div class="max-w-md">
+      <h1 class="text-5xl font-bold">Pokemon Details</h1>
       <img
-        class="rounded-lg mt-2"
-        src="https://i.pinimg.com/originals/db/be/4d/dbbe4d8b26b526e17cd78b90a9fc953c.gif"
-        alt="Shoes"
+        src="https://i.pinimg.com/originals/8d/66/d9/8d66d96a9893ee18763d913767db869f.png"
+        alt=""
+        class="w-52 mx-auto"
       />
-    </figure>
-    <div class="card-body">
-      <h2 class="card-title text-4xl">Name:</h2>
-      <p class="text-2xl">Type:</p>
-      <p class="text-xl">Level:</p>
-      <p class="text-xl">Species:</p>
-      <div class="card-actions justify-end">
-        <button class="btn btn-primary bg-blue-400 border-none">Edit</button>
-        <button class="btn btn-primary bg-red-400">Delete</button>
+      <button
+        class="btn btn-primary border-none bg-emerald-700"
+        [routerLink]="['/']"
+      >
+        Go Home
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="container mx-auto mb-10 mt-10">
+  <div class="max-w-lg mx-auto mt-8">
+    <!-- Pokemon Card -->
+    <div class="bg-white shadow-md rounded-lg p-6">
+      <h2 class="text-xl font-semibold mb-4">Bulbasaur</h2>
+      <div class="grid grid-cols-2 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <p class="text-gray-500 mb-2">Type: Grass/Poison</p>
+          <p class="text-gray-500 mb-2">Level: 10</p>
+          <p class="text-gray-500 mb-2">Species: Seed Pokemon</p>
+        </div>
+        <div class="col-span-2 sm:col-span-1 flex justify-end">
+          <button class="btn btn-ghost bg-blue-400">Edit</button>
+          <button class="btn btn-ghost bg-red-400 ml-2">Delete</button>
+        </div>
       </div>
     </div>
   </div>
