--- a/src/app/components/trainer-table/trainer-table.component.html
+++ b/src/app/components/trainer-table/trainer-table.component.html
@@ -1,44 +1,52 @@
-<h1 class="text-4xl flex items-center justify-center">Trainer Table</h1>
+<div class="hero bg-base-200">
+  <div class="hero-content text-center">
+    <div class="max-w-md">
+      <h1 class="text-5xl font-bold mt-10">Select Your Trainer</h1>
+      <img
+        class="w-48 mx-auto mt-5"
+        src="https://freepngimg.com/thumb/pokemon/20090-7-pokemon-ash-hd.png"
+        alt=""
+      />
 
-<div class="overflow-x-auto">
-  <table class="table">
-    <!-- head -->
-    <thead>
+      <button class="btn btn-primary mt-5" [routerLink]="['/']">Go Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="overflow-x-auto max-w-6xl mx-auto mt-10 mb-10">
+  <table class="table w-full bg-white shadow-md rounded-lg">
+    <!-- Head -->
+    <thead class="bg-gray-100">
       <tr>
-        <th>Name</th>
-        <th>Badge</th>
-        <th></th>
+        <th class="px-6 py-3 border-b border-gray-200">Name</th>
+        <th class="px-6 py-3 border-b border-gray-200">Badge</th>
+        <th class="px-6 py-3 border-b border-gray-200">Actions</th>
       </tr>
     </thead>
     <tbody>
-      <!-- row 1 -->
+      <!-- Row 1 -->
       <tr>
-        <td>
-          <div class="flex items-center gap-3">
-            <div>
+        <td class="px-6 py-4 whitespace-nowrap">
+          <div class="flex items-center">
+            <div class="ml-4">
               <div class="font-bold">Hart Hagerty</div>
             </div>
           </div>
         </td>
-        <td>
-          Zemlak, Daniel and Leannon
-          <br />
-        </td>
-        <th>
+        <td class="px-6 py-4 whitespace-nowrap">Zemlak, Daniel and Leannon</td>
+        <td class="px-6 py-4 whitespace-nowrap">
           <button class="btn btn-ghost bg-green-400 btn-xs mr-1">View</button>
           <button class="btn btn-ghost bg-blue-400 btn-xs mr-1">Edit</button>
           <button class="btn btn-ghost bg-red-400 btn-xs mr-1">Delete</button>
-        </th>
+        </td>
       </tr>
-
-      <!-- foot -->
+      <!-- Additional rows for more trainers -->
     </tbody>
-
     <tfoot>
       <tr>
-        <th>Name</th>
-        <th>Badge</th>
-        <th></th>
+        <th class="px-6 py-3 border-t border-gray-200">Name</th>
+        <th class="px-6 py-3 border-t border-gray-200">Badge</th>
+        <th class="px-6 py-3 border-t border-gray-200">Actions</th>
       </tr>
     </tfoot>
   </table>
