Aos Animation Added

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,8 +6,11 @@
           src="https://ssb.wiki.gallery/images/a/a0/Pikachu_SSB4.png"
           alt="Pikachu"
           class="w-52"
+          data-aos="zoom-in-down"
         />
-        <h1 class="text-6xl font-bold mr-6">Pokemon Gym Hub</h1>
+        <h1 class="text-6xl font-bold mr-6" data-aos="zoom-out-left">
+          Pokemon Gym Hub
+        </h1>
       </div>
       <p class="py-6 text-xl text-gray-700">
         Welcome to the Pokemon Gym Hub! This project is a comprehensive database
