--- a/src/app/components/gym-cards/gym-card/gym-card.component.html
+++ b/src/app/components/gym-cards/gym-card/gym-card.component.html
@@ -1,5 +1,6 @@
 <div
   class="card lg:w-96 md:w-72 w-56 bg-base-100 shadow-xl mb-10 cursor-pointer card-hover"
+  data-aos="fade-up"
 >
   <figure>
     <img src="https://www.pokemongoplusplus.com/img/img-1.jpg" alt="Shoes" />
