--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -6,6 +6,7 @@
         src="https://i.pinimg.com/originals/8d/66/d9/8d66d96a9893ee18763d913767db869f.png"
         alt=""
         class="w-52 mx-auto"
+        data-aos="zoom-in"
       />
       <button
         class="btn btn-primary border-none bg-emerald-700"
@@ -20,7 +21,7 @@
 <div class="container mx-auto mb-10 mt-10">
   <div class="max-w-lg mx-auto mt-8">
     <!-- Pokemon Card -->
-    <div class="bg-white shadow-md rounded-lg p-6">
+    <div class="bg-white shadow-md rounded-lg p-6" data-aos="fade-up">
       <h2 class="text-xl font-semibold mb-4">Bulbasaur</h2>
       <div class="grid grid-cols-2 gap-4">
         <div class="col-span-2 sm:col-span-1">
