--- a/src/app/components/gym-cards/gym-banner/gym-banner.component.html
+++ b/src/app/components/gym-cards/gym-banner/gym-banner.component.html
@@ -1,7 +1,9 @@
 <div class="hero h-96 bg-base-200 border-2">
   <div class="hero-content text-center">
     <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Welcome to Pokemon Gym Hub</h1>
+      <h1 class="text-5xl font-bold" data-aos="fade-down">
+        Welcome to Pokemon Gym Hub
+      </h1>
       <p class="py-6 text-2xl text-gray-500">Pick Your Gym</p>
       <!-- Open the modal using ID.showModal() method -->
       <button class="btn btn-primary" onclick="my_modal_1.showModal()">
