--- a/src/app/components/trainer-list/trainer-list.component.html
+++ b/src/app/components/trainer-list/trainer-list.component.html
@@ -1,7 +1,9 @@
 <div class="hero bg-base-200">
   <div class="hero-content text-center">
     <div class="max-w-md">
-      <h1 class="text-5xl font-bold mt-10">Select Your Trainer</h1>
+      <h1 class="text-5xl font-bold mt-10" data-aos="fade-down">
+        Select Your Trainer
+      </h1>
       <img
         class="w-52 mx-auto mt-5"
         src="https://freepngimg.com/thumb/categories/1150.png"
@@ -21,17 +23,17 @@
         <!-- Trainer Cards (dummy data for now) -->
         <div class="space-y-4">
           <!-- Trainer Card 1 -->
-          <div class="border border-gray-200 p-4 rounded-lg">
+          <div class="border border-gray-200 p-4 rounded-lg" data-aos="flip-up">
             <h3 class="text-lg font-semibold">Trainer 1</h3>
             <p class="text-gray-500">Description of Trainer 1</p>
           </div>
           <!-- Trainer Card 2 -->
-          <div class="border border-gray-200 p-4 rounded-lg">
+          <div class="border border-gray-200 p-4 rounded-lg" data-aos="flip-up">
             <h3 class="text-lg font-semibold">Trainer 2</h3>
             <p class="text-gray-500">Description of Trainer 2</p>
           </div>
           <!-- Trainer Card 3 -->
-          <div class="border border-gray-200 p-4 rounded-lg">
+          <div class="border border-gray-200 p-4 rounded-lg" data-aos="flip-up">
             <h3 class="text-lg font-semibold">Trainer 3</h3>
             <p class="text-gray-500">Description of Trainer 3</p>
           </div>
@@ -39,7 +41,7 @@
       </div>
     </div>
     <!-- Gym ID and Gym Name -->
-    <div class="max-w-md">
+    <div class="max-w-md" data-aos="fade-left">
       <div class="bg-white shadow-md rounded-lg p-6">
         <h2 class="text-2xl font-bold mb-4">Gym Details</h2>
         <!-- Gym Details (dummy data for now) -->
