--- a/src/app/components/trainer-table/trainer-table.component.html
+++ b/src/app/components/trainer-table/trainer-table.component.html
@@ -1,7 +1,9 @@
 <div class="hero bg-base-200">
   <div class="hero-content text-center">
     <div class="max-w-md">
-      <h1 class="text-5xl font-bold mt-10">Select Your Trainer</h1>
+      <h1 class="text-5xl font-bold mt-10" data-aos="fade-down">
+        Select Your Trainer
+      </h1>
       <img
         class="w-48 mx-auto mt-5"
         src="https://freepngimg.com/thumb/pokemon/20090-7-pokemon-ash-hd.png"
@@ -23,7 +25,7 @@
         <th class="px-6 py-3 border-b border-gray-200">Actions</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody data-aos="flip-up">
       <!-- Row 1 -->
       <tr>
         <td class="px-6 py-4 whitespace-nowrap">
