--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -2,25 +2,103 @@
   <div class="hero-content text-center">
     <div class="max-w-md">
       <h1 class="text-5xl font-bold">Pokemon Details</h1>
-      <img
+      <!-- <img
         src="https://i.pinimg.com/originals/8d/66/d9/8d66d96a9893ee18763d913767db869f.png"
         alt=""
         class="w-52 mx-auto"
         data-aos="zoom-in"
-      />
-      <button
-        class="btn btn-primary border-none bg-emerald-700"
-        [routerLink]="['/']"
-      >
-        Go Home
-      </button>
+      /> -->
     </div>
   </div>
 </div>
 
-<div class="container mx-auto mb-10 mt-10">
+<section class="vh-100 bg-gray-200 flex mx-auto lg:w-[1500px] mb-10 mt-10">
+  <div class="container py-5 h-full">
+    <div class="flex justify-center items-center h-full">
+      <div class="w-full lg:w-6/12 mb-4 lg:mb-0">
+        <div class="bg-white rounded-lg shadow-md">
+          <div class="flex flex-col lg:flex-row">
+            <!-- Left Side - Avatar and Info -->
+            <div
+              class="bg-gradient-to-r from-blue-500 to-purple-500 text-white p-5 lg:p-8 rounded-tl-lg rounded-bl-lg lg:rounded-bl-none lg:rounded-tr-lg"
+            >
+              <img
+                src="https://i.pinimg.com/originals/8d/66/d9/8d66d96a9893ee18763d913767db869f.png"
+                alt="Avatar"
+                class="w-20 h-20 lg:w-24 lg:h-24 mx-auto my-5"
+              />
+
+              <h5 class="text-lg lg:text-xl">Marie Horwitz</h5>
+              <div class="flex flex-row mx-auto w-32 justify-center mt-5">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-6 h-6 cursor-pointer"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-6 h-6 cursor-pointer ml-2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+                  />
+                </svg>
+              </div>
+
+              <i class="far fa-edit mt-5"></i>
+            </div>
+            <!-- Right Side - Information -->
+            <div class="bg-white p-5 lg:p-8 rounded-br-lg rounded-tr-lg">
+              <div>
+                <h6 class="text-lg font-semibold">Information</h6>
+                <hr class="mt-2 mb-4 border-gray-300" />
+                <div class="flex flex-col lg:flex-row">
+                  <div class="lg:w-1/2 mb-4 lg:mb-0">
+                    <h6 class="font-semibold">Type</h6>
+                    <p class="text-gray-600">infoexample.com</p>
+                  </div>
+                  <div class="lg:w-1/2 ml-10">
+                    <h6 class="font-semibold">Level</h6>
+                    <p class="text-gray-600">123 456 789</p>
+                  </div>
+                </div>
+              </div>
+              <div class="mt-8">
+                <h6 class="text-lg font-semibold">Other Info</h6>
+                <hr class="mt-2 mb-4 border-gray-300" />
+                <div class="flex flex-col lg:flex-row">
+                  <div class="lg:w-1/2">
+                    <h6 class="font-semibold">Species</h6>
+                    <p class="text-gray-600">Dolor sit amet</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <div class="container mx-auto mb-10 mt-10">
   <div class="max-w-lg mx-auto mt-8">
-    <!-- Pokemon Card -->
+ 
     <div class="bg-white shadow-md rounded-lg p-6" data-aos="fade-up">
       <h2 class="text-xl font-semibold mb-4">Bulbasaur</h2>
       <div class="grid grid-cols-2 gap-4">
@@ -36,4 +114,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
