--- a/src/app/components/gym-cards/gym-card-edit/gym-card-edit.component.html
+++ b/src/app/components/gym-cards/gym-card-edit/gym-card-edit.component.html
@@ -20,6 +20,13 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
+      <button
+        type="submit"
+        class="btn btn-error text-white mt-2"
+        (click)="deleteGym()"
+      >
+        Delete
+      </button>
     </div>
   </div>
 </div>
