Fix Fetch Issue

--- a/src/app/components/gym-cards/gym-card-edit/gym-card-edit.component.html
+++ b/src/app/components/gym-cards/gym-card-edit/gym-card-edit.component.html
@@ -17,12 +17,17 @@
           />
         </div>
         <div class="flex justify-center mt-4">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button
+            type="submit"
+            class="h-10 w-32 text-white rounded-lg bg-blue-500"
+          >
+            Submit
+          </button>
         </div>
       </form>
       <button
         type="submit"
-        class="btn btn-error text-white mt-2"
+        class="h-10 w-32 text-white rounded-lg bg-red-500 mt-2"
         (click)="deleteGym()"
       >
         Delete
