--- a/src/app/components/pokemon-list/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-list/pokemon-card/pokemon-card.component.html
@@ -4,7 +4,10 @@
   [routerLink]="['/pokemon', pokemon_data.id]"
 >
   <figure>
-    <img src="https://www.pokemongoplusplus.com/img/img-1.jpg" alt="Shoes" />
+    <img
+      src="https://t4.ftcdn.net/jpg/02/65/13/03/360_F_265130336_TE7GgWBunhfkGx4sA7YAS9kIZ5EROGth.jpg"
+      alt="Shoes"
+    />
   </figure>
   <div class="card-body">
     <h2 class="card-title flex justify-center">{{ pokemon_data.name }}</h2>
