--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,6 +25,16 @@
     <a [routerLink]="['/about']" class="btn border-none bg-blue-200 text-black"
       >About</a
     >
+    <a
+      [routerLink]="['/pokemon-list']"
+      class="btn border-none bg-orange-200 text-black"
+      >Pokemon List</a
+    >
+    <a
+      [routerLink]="['/trainer']"
+      class="btn border-none bg-blue-200 text-black"
+      >Trainer List</a
+    >
     <a [routerLink]="['/']" class="btn bg-teal-500 border-none">Home</a>
   </div>
 </div>
