--- a/src/app/components/trainer-table/trainer-table.component.html
+++ b/src/app/components/trainer-table/trainer-table.component.html
@@ -2,7 +2,7 @@
   <div class="hero-content text-center">
     <div class="max-w-md">
       <h1 class="text-5xl font-bold mt-10" data-aos="fade-down">
-        Select Your Trainer
+        Trainer List
       </h1>
       <img
         class="w-48 mx-auto mt-5"
@@ -10,7 +10,9 @@
         alt=""
       />
 
-      <button class="btn btn-primary mt-5" [routerLink]="['/']">Go Back</button>
+      <button class="btn btn-primary mt-5" [routerLink]="['/trainer-create']">
+        Create Trainer
+      </button>
     </div>
   </div>
 </div>
@@ -26,23 +28,21 @@
       </tr>
     </thead>
     <tbody data-aos="flip-up">
-      <!-- Row 1 -->
-      <tr>
+      <!-- Loop through trainers -->
+      <tr *ngFor="let trainer of trainers">
+        <td class="px-6 py-4 whitespace-nowrap">{{ trainer.name }}</td>
+        <td class="px-6 py-4 whitespace-nowrap">{{ trainer.badge }}</td>
         <td class="px-6 py-4 whitespace-nowrap">
-          <div class="flex items-center">
-            <div class="ml-4">
-              <div class="font-bold">Hart Hagerty</div>
-            </div>
-          </div>
-        </td>
-        <td class="px-6 py-4 whitespace-nowrap">Zemlak, Daniel and Leannon</td>
-        <td class="px-6 py-4 whitespace-nowrap">
-          <button class="btn btn-ghost bg-green-400 btn-xs mr-1">View</button>
+          <!-- <button class="btn btn-ghost bg-green-400 btn-xs mr-1">View</button> -->
           <button class="btn btn-ghost bg-blue-400 btn-xs mr-1">Edit</button>
-          <button class="btn btn-ghost bg-red-400 btn-xs mr-1">Delete</button>
+          <!-- <button
+            class="btn btn-ghost bg-red-400 btn-xs mr-1"
+            (click)="deleteTrainer(trainer)"
+          >
+            Delete
+          </button> -->
         </td>
       </tr>
-      <!-- Additional rows for more trainers -->
     </tbody>
     <tfoot>
       <tr>
