--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
       >About</a
     >
     <a
-      [routerLink]="['/pokemon-list']"
+      [routerLink]="['/pokemon']"
       class="btn border-none bg-orange-200 text-black"
       >Pokemon List</a
     >
