--- a/src/app/trainer/containers/trainer-create-container/trainer-create-container.component.html
+++ b/src/app/trainer/containers/trainer-create-container/trainer-create-container.component.html
@@ -1,7 +1,6 @@
 
-<app-trainer-registration-form
+<app-trainer-form
 (createTrainer)="onCreateTrainer($event)"
+[pageType]='formType'
 >
-
-
-</app-trainer-registration-form>
+</app-trainer-form>
