--- a/src/app/trainer/views/trainer-form/trainer-form.component.html
+++ b/src/app/trainer/views/trainer-form/trainer-form.component.html
@@ -1,7 +1,7 @@
 <div class="hero min-h-screen bg-base-200">
     <div class="hero-content text-center">
       <div class="max-w-md">
-        <h1 class="text-5xl font-bold">Create Trainer</h1>
+        <h1 class="text-5xl font-bold">{{ pageType === 'edit' ? 'Edit Trainer' : 'Create Trainer' }}</h1>
         <!-- Input field and submit button -->
         <form (ngSubmit)="onSubmitForm()">
           <div class="form-control mt-2">
@@ -15,7 +15,7 @@
               [(ngModel)]="trainerName"
             />
           </div>
-  
+
           <div class="form-control mt-2">
             <input
               type="text"
@@ -27,7 +27,7 @@
               [(ngModel)]="badge"
             />
           </div>
-  
+
           <div class="form-control mt-2">
             <label
               for="badgeSelect"
@@ -83,7 +83,7 @@
               type="submit"
               class="h-10 w-32 text-white rounded-lg bg-blue-500 mt-10"
             >
-              Submit
+              {{ pageType === 'edit' ? 'Update' : 'Create' }}
             </button>
           </div>
         </form>
