--- a/src/app/gym/containers/gym-cards-container/gym-cards-container.component.html
+++ b/src/app/gym/containers/gym-cards-container/gym-cards-container.component.html
@@ -1,4 +1,4 @@
-<app-gym-banner></app-gym-banner>
+<app-gym-banner-container></app-gym-banner-container>
 <h1 class="mt-10 font-bold text-4xl flex items-center justify-center mb-10">
   Gym List
 </h1>
