--- a/src/app/pokemon/containers/pokemon-list-component-container/pokemon-list-container.component.html
+++ b/src/app/pokemon/containers/pokemon-list-component-container/pokemon-list-container.component.html
@@ -1,4 +1,4 @@
-<app-pokemon-list-banner></app-pokemon-list-banner>
+<app-pokemon-list-banner-container></app-pokemon-list-banner-container>
 <div
   class="lg:w-[1300px] mx-auto grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1"
 >
