--- a/src/app/gym/containers/gym-banner-container/gym-banner-container.component.html
+++ b/src/app/gym/containers/gym-banner-container/gym-banner-container.component.html
@@ -1,1 +1,1 @@
-<app-gym-banner [newGymName]="newGymName" [submitForm]="submitForm()"></app-gym-banner>
+<app-gym-banner [newGymName]="newGymName" [submitForm]="submitForm"></app-gym-banner>
